# diy-os

./: .gitignore  Cargo.toml  ProjectStructre.md  a.out  build.rs  make_tar.sh  sfs.img  shell.nix  temp.asm  temp.txt  usermode.asm
.cargo/: config
.github/workflows/: rust.yml
anyhow/src/: backtrace.rs  chain.rs  context.rs  error.rs  lib.rs  wrapper.rs
diy-os/: Cargo.toml  build.rs
diy-os-lib/: Cargo.toml
diy-os-lib/src/: allocator.rs  console.rs  device_manager.rs  elf.rs  filesystem.rs  framebuffer.rs  gdt.rs  human_input_devices.rs  interrupts.rs  lib.rs  logger.rs  memory.rs  multitasking.rs  pci.rs  pit.rs  serial.rs  syscalls.rs  usermode.rs  volatile.rs
diy-os-lib/src/allocator/: fixed_size_block.rs  linked_list.rs
diy-os-lib/src/collections/: linked_lists.rs  queues.rs
diy-os-lib/src/console/: font.rs  graphics.rs
diy-os-lib/src/filesystem/: gpt.rs  ustar.rs
diy-os-lib/src/multitasking/: context_switch.rs  mutex.rs
diy-os-lib/src/pci/: ide.rs
diy-os-lib/src/pci/ide/: structs.rs
diy-os-lib/src/ps2/controller/: responses.rs
diy-os-lib/src/ps2/controller/controllers/: generic.rs
diy-os-lib/src/ps2/devices/: keyboard.rs
diy-os-macros/: Cargo.toml
diy-os-macros/src/: lib.rs
diy-os/src/: acpi.rs  allocator.rs  collections.rs  console.rs  elf.rs  errors.rs  filesystem.rs  framebuffer.rs  gdt.rs  human_input_devices.rs  interrupts.rs  lib.rs  log.rs  logger.rs  main.rs  memory.rs  multitasking.rs  pit.rs  ps2.rs  serial.rs  spinlock.rs  syscalls.rs  timer.rs  usermode.rs  volatile.rs
diy-os/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
diy-os/src/collections/: linked_lists.rs  queues.rs
diy-os/src/console/: font.rs  graphics.rs
diy-os/src/filesystem/: ustar.rs
diy-os/src/framebuffer/: vga_driver.rs
diy-os/src/multitasking/: mutex.rs  usermode.rs
diy-os/src/ps2/: controller.rs  controllers.rs  devices.rs
diy-os/src/ps2/controller/: commands.rs  responses.rs
diy-os/src/ps2/controller/controllers/: generic.rs
diy-os/src/ps2/controllers/: generic.rs
diy-os/src/ps2/devices/: keyboard.rs
diy-os/src/syscalls/: syscalls.rs  wrapper.rs
diy-os/tests/: stack_overflow.rs
drivers/fat16_read_only/: Cargo.toml
drivers/fat16_read_only/src/: drivers.rs  fat.rs  lib.rs
drivers/fat16_read_only/src/fat/: fat16.rs  fat32.rs
drivers/primitive_memmapped_fat32_read_only_driver/: Cargo.toml
drivers/primitive_memmapped_fat32_read_only_driver/src/: drivers.rs  fat.rs  lib.rs
drivers/primitive_memmapped_fat32_read_only_driver/src/fat/: fat16.rs  fat32.rs
drivers/primitive_memmapped_fat32_read_only_driver/tests/: fat16.rs
kernel_logger/: Cargo.toml
kernel_logger/src/: lib.rs
runners/: Cargo.toml  build.rs
spinlock/: Cargo.toml
spinlock/src/: lib.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  qemu-bios.rs  qemu-uefi.rs  serial.rs  spinlock.rs  vga_driver.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs
