cargo-features = ["edition2024"]

[package]
name = "os"
version = "0.1.0"
edition = "2024"
default-run = "os"

[workspace]
members = ["diy-os", "diy-os-macros"]

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
diy-os = { path = "diy-os", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = { path = "../bootloader" } 

[[bin]]
name = "qemu-bios"
path = "src/qemu-bios.rs"

[[bin]]
name = "qemu-uefi"
path = "src/qemu-uefi.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
