cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
default-target = "x86_64-unknown-none"

[dependencies]
bootloader_api = "0.11.7"
x86_64 = "0.15.2"
thiserror = { version = "2.0", default-features = false }
anyhow = { version = "1.0.94", default-features = false }
spinlock = { version = "0.1.0", path = "../spinlock" }
log = "0.4.27"
kernel_logger = { version = "0.1.0", path = "../kernel_logger" }
refine = { git = "https://github.com/Colepng/Refinement-types" }
crc32fast = { version = "1.5.0", default-features = false }
diy-os = { path = "../diy-os-lib" }
qemu-exit = "3.0.2"

[[bin]]
name = "kernel"
test = false
bench = false

[features]
debug = ["diy-os/debug"]
