[package]
name = "runners"
version = "0.1.0"
edition = "2024"

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
diy-os = { path = "../diy-os", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = { version = "0.11.10", default-features = false, features = ["uefi"] }

[[bin]]
name = "runners"
test = false

[[bin]]
name = "qemu-uefi"
path = "src/qemu-uefi.rs"
test = false

[features]
debug = ["diy-os/debug"]
